# GitBiker

./: .gitignore  CLAUDE.md  DESIGN.md  GEMINI.md  LICENSE  README.md  TODOS.md  UI_IMPROVEMENT_PLAN.html  design.pen  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: agent_status_dashboard_plan.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_monitor.rs  github_provider.rs  lib.rs  main.rs  ssh_manager.rs  system_setup.rs  watcher.rs
src-tauri/src/ai/: gemini.rs  mod.rs  openai_compatible.rs
src-tauri/src/commands/: ai_commands.rs  branch_commands.rs  editor_commands.rs  file_commands.rs  git_commands.rs  mod.rs  remote_commands.rs  shell_commands.rs
src-tauri/src/git/: error.rs  local_git.rs  mod.rs  operations.rs  types.rs
src/lib/actions/: clickOutside.test.ts  clickOutside.ts
src/lib/components/: AgentDashboard.svelte  AiBranchManager.svelte  AiExplanationDialog.svelte  BranchCompare.svelte  BranchManager.svelte  BranchSidebar.svelte  CloneDialog.svelte  CommandPalette.svelte  CommitFileList.svelte  CommitLog.svelte  ConflictResolver.svelte  ContextMenu.svelte  (+18 more)
src/routes/: +page.svelte
src/tests/: setup.ts
user-stories/: US-001-git-init.md  US-002-revert-commit.md  US-003-undo-unpushed-commits.md  US-004-file-history.md  US-005-branch-compare.md  US-006-partial-stash.md  US-007-code-history-search.md  US-008-commit-filter-by-branch.md  US-009-auto-fetch.md  US-010-pre-commit-hook-support.md
(+21 files in other folders)
