[package]
name = "gitbiker"
version = "0.2.0"
description = "GitBiker — Fast, minimal, open-source Git GUI client"
authors = ["aspdo"]
edition = "2021"

[lib]
name = "gitbiker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio = { version = "1", features = ["process"] }
notify = "7"
notify-debouncer-full = "0.4"
which = "7"
sha2 = "0.10"
tempfile = "3"

